--- a/Yung-Kong-Co-Website-Redo/css/styles.css
+++ b/Yung-Kong-Co-Website-Redo/css/styles.css
@@ -87,7 +87,7 @@ body {
 	max-height: 50px;
 }
 
-:root{
+:root {
 	scroll-padding-top: 60px;
 }
 
@@ -183,7 +183,7 @@ body {
 }
 
 /************************* 
-Footer
+ Footer
 *************************/
 
 .footer {
@@ -259,7 +259,6 @@ footer a:hover {
 }
 
 .parallax-image {
-
 	filter: brightness(30%);
 	position: absolute;
 	width: 100%;
@@ -271,7 +270,10 @@ footer a:hover {
 	background-position: center;
 	background-repeat: no-repeat;
 	z-index: 1;
+
+
 }
+
 
 .parallax-content {
 	position: relative;
@@ -307,19 +309,43 @@ footer a:hover {
 
 
 #contact-departments .department-card {
-    transition: box-shadow 0.5s ease;
+	transition: box-shadow 0.5s ease;
 }
 
 #contact-departments .department-card:hover {
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .department-card .department-img {
-    transition: filter 0.5s ease;
+	transition: filter 0.5s ease;
 }
 
+/* Nav Tab */
+#nav-tabContent img:hover,
 .department-card .department-img:hover {
-    filter: brightness(1.08);
+	filter: brightness(1.08);
+}
+
+#nav-tabContent img {
+	transition: box-shadow 0.5s ease, filter 0.5s ease;
+}
+
+#nav-tabContent img:hover {
+	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+	filter: brightness(1.08);
+}
+
+
+.nav-tabs .nav-link.active {
+	background-color: #66b0ff;
+	transform: translateY(-5px);
+	z-index: 2;
+	color: #fff;
+	border-bottom: 8px solid #4ba2ff;
+}
+
+.nav-tabs .nav-link {
+	transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease, border-color 0.5s ease;
 }
 
 
@@ -337,3 +363,8 @@ footer a:hover {
 	/* Hidden by default */
 	z-index: 100;
 }
+
+
+/************************* 
+ Tab
+*************************/
