--- a/Yung-Kong-Co-Website-Redo/css/styles.css
+++ b/Yung-Kong-Co-Website-Redo/css/styles.css
@@ -154,7 +154,7 @@ body {
 	/* Animation */
 	opacity: 0;
 	visibility: hidden;
-	transition: opacity 0.5s ease, visibility 0.5s ease, transform 0.3s ease;
+	transition: all 0.3s ease;
 
 }
 
@@ -177,7 +177,6 @@ body {
 	color: #4690ff;
 	transform: translateX(5px);
 	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-
 }
 
 
@@ -409,6 +408,10 @@ footer a:hover {
 
 .nav-tabs .nav-link {
 	transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease, border-color 0.5s ease;
+}
+
+.nav-tabs .nav-link:hover {
+	background-color: #d4e9ff;
 }
 
 
