--- a/Yung-Kong-Co-Website-Redo/css/styles.css
+++ b/Yung-Kong-Co-Website-Redo/css/styles.css
@@ -360,6 +360,7 @@ footer a:hover {
 #contact-departments .index-department address {
 	transition: all 0.5s ease;
 	transform: translateY(10px);
+	background-color: #fff3d2b8;
 }
 
 
@@ -371,12 +372,12 @@ footer a:hover {
 }
 
 #contact-departments .index-department img {
-	transform: translateY(-55px);
+	transform: translateY(-50px);
 	transition: all 0.5s ease;
 }
 
 #contact-departments .index-department:hover img {
-	transform: translateY(-20px);
+	transform: translateY(-10px);
 }
 
 
