--- a/css/styles.css
+++ b/css/styles.css
@@ -39,26 +39,29 @@
 /* styles.css */
 
 #preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #706d5d; /* Semi-transparent white background */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999; /* Ensure it sits on top of other elements */
-    transition: all 0s ease;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #706d5d;
+	/* Semi-transparent white background */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 9999;
+	/* Ensure it sits on top of other elements */
+	transition: all 0s ease;
 }
 
 #preloader img {
-    width: 100px; /* Adjust the size of your loader image */
+	width: 100px;
+	/* Adjust the size of your loader image */
 }
 
 #preloader.hidden {
-    opacity: 0;
-    visibility: hidden;
+	opacity: 0;
+	visibility: hidden;
 }
 
 
@@ -161,7 +164,7 @@ body {
 #navbar .nav-item:hover .dropdown-menu {
 	opacity: 1;
 	visibility: visible;
-	transform: translateY(0);
+	transform: translateY(-5px);
 	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
 	border-top: 3px solid rgb(88, 88, 88);
 }
@@ -183,6 +186,42 @@ body {
 .dropdown {
 	position: static !important;
 }
+
+
+
+
+/************************* 
+ Sidebar
+*************************/
+
+.sidebar {
+	border-right: 1px solid #ddd;
+	background-color: #f8f9fa;
+	padding: 20px;
+	height: 100vh;
+}
+
+.sticky-top {
+	position: sticky;
+	top: 60px;
+	z-index: 1020;
+}
+
+
+.sidebar-tabs .nav-link {
+	display: block;
+}
+
+.sidebar-tabs .nav-tabs {
+	flex-direction: column;
+	border-right: 1px solid #ddd;
+}
+
+.sidebar-tabs .tab-content {
+	flex-grow: 1;
+	padding-left: 20px;
+}
+
 
 
 
@@ -414,6 +453,39 @@ footer a:hover {
 .nav-tabs .nav-link:hover {
 	background-color: #d4e9ff;
 }
+
+
+
+
+
+
+
+
+
+.product-tabs .nav-link.active {
+	background-color: #66b0ff;
+	z-index: 2;
+	color: #fff;
+	border-bottom: 8px solid #46a0ff;
+}
+
+.product-tabs .nav-link {
+	transition: transform 0.3s ease-in-out, background-color 0.3s ease, color 0.3s ease, border-color 0.5s ease;
+}
+
+.product-tabs .nav-link.active{
+	transform: translateX(30px);
+
+}
+
+.product-tabs .nav-link:not(.active):hover {
+	background-color: #d4e9ff;
+	transform: translateX(10px);
+
+}
+
+
+
 
 
 /************************* 
