--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
 }
 
 #index-brands {
-	background-color: #7ba1df;
+	background-color: #ffffff;
 }
 
 
@@ -79,15 +79,12 @@ a:hover {
 html,
 body {
 	height: 100%;
-	/* Ensure the body takes up the full height */
 	margin: 0;
-}
-
-body {
 	display: flex;
-	/* so that footer get pushed bottom */
 	flex-direction: column;
 }
+
+body {}
 
 
 
@@ -197,33 +194,33 @@ body {
 .sidebar {
 	border-right: 1px solid #ddd;
 	background-color: #f8f9fa;
-	padding: 20px;
 	height: 100vh;
-}
-
-.sticky-top {
-	position: sticky;
 	top: 60px;
-	z-index: 1020;
 }
 
 
-.sidebar-tabs .nav-link {
-	display: block;
-}
-
-.sidebar-tabs .nav-tabs {
-	flex-direction: column;
-	border-right: 1px solid #ddd;
-}
-
-.sidebar-tabs .tab-content {
-	flex-grow: 1;
-	padding-left: 20px;
+.sidebar .sidebar-link.active {
+	background-color: #66b0ff;
+	transform: translateX(20px);
+	z-index: 2;
+	color: #fff;
+	border-right: 8px solid #3597ff;
 }
 
 
+.sidebar .sidebar-link {
+	border-right: 1px solid transparent;
+	border-bottom: 1px solid rgba(205, 205, 205, 0.492);
+	transition: transform 0.3s ease, background-color 0.3s ease, color 0.1s ease, border-color 0.5s ease;
+}
 
+.sidebar .sidebar-link:hover {
+	background-color: #d4e9ff;
+}
+
+.sidebar .sidebar-link:not(.active):hover {
+	transform: translateX(10px);
+}
 
 /************************* 
  Carousel
@@ -231,16 +228,12 @@ body {
 
 
 /* Shadow */
-.carousel-inner {
+.carousel-inner img {
 	filter: brightness(40%);
 }
 
 /* carousel text */
-.caption {
-	position: absolute;
-	top: 50%;
-	z-index: 10;
-	width: 100%;
+.carousel-caption {
 	text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.5);
 }
 
@@ -257,9 +250,7 @@ body {
  Footer
 *************************/
 
-.footer {
-	margin-top: auto;
-}
+
 
 footer img {
 	max-height: 100px;
@@ -368,7 +359,8 @@ footer a:hover {
 }
 
 .card-img-container {
-	height: 200px;
+	/* min-height: 25vh; */
+	max-height: 33vh;
 	overflow: hidden;
 	position: relative;
 }
@@ -459,29 +451,6 @@ footer a:hover {
 
 
 
-
-
-.product-tabs .nav-link.active {
-	background-color: #66b0ff;
-	z-index: 2;
-	color: #fff;
-	border-bottom: 8px solid #46a0ff;
-}
-
-.product-tabs .nav-link {
-	transition: transform 0.3s ease-in-out, background-color 0.3s ease, color 0.3s ease, border-color 0.5s ease;
-}
-
-.product-tabs .nav-link.active{
-	transform: translateX(30px);
-
-}
-
-.product-tabs .nav-link:not(.active):hover {
-	background-color: #d4e9ff;
-	transform: translateX(10px);
-
-}
 
 
 
