--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,8 @@
  id - color
 *************************/
 
-#index-productList {
-	background-color: #ececec;
+#index-whatWeOffer {
+	background-color: #f3ffff;
 }
 
 #index-department {
@@ -17,7 +17,6 @@
 #index-brands {
 	background-color: #ffffff;
 }
-
 
 
 #contact-departments {
