--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,14 @@
 /* styles.css */
 
+:root {
+	--navbar-expand: 80px;
+	--navbar-collapse: 60px;
+	scroll-padding-top: var(--navbar-collapse);
+}
 
+/************************* 
+ variable
+*************************/
 
 /************************* 
  id - color
@@ -95,38 +103,66 @@ body {}
 
 /* Navbar */
 
+
+/* .navbar-nav, */
+
+
 #navbar {
-	background-color: transparent;
+	/* background-color: transparent; */
 	transition: background-color 0.8s ease, height 0.5s ease;
-	height: 80px;
+	height: var(--navbar-expand);
 }
-
-#navbar .navbar-brand img {
-	max-height: 70px;
-	object-fit: contain;
-	transition: max-height 1s ease;
-}
-
-
-#navbar.navbar-scrolled {
-	background-color: #333333 !important;
-	height: 60px;
-}
-
-#navbar.navbar-scrolled img {
-	max-height: 50px;
-}
-
-:root {
-	scroll-padding-top: 60px;
-}
-
 
 #navbar .navbar-brand {
 	text-shadow: 2px 2px 4px rgba(0, 0, 0);
 	font-family: Baskerville, Georgia, "Kaiti", "Liberation Serif", "Kaiti SC", STKaiti, "AR PL UKai CN", "AR PL UKai HK", "AR PL UKai TW", "AR PL UKai TW MBE", "AR PL KaitiM GB", KaiTi, KaiTi_GB2312, DFKai-SB, "TW\-Kai", serif;
 
 }
+
+#navbar .navbar-brand img {
+	max-height: calc(var(--navbar-expand) - 10px);
+	transition: all 1s ease;
+}
+
+
+@media (max-width: 576px) {
+
+	#navbar,
+	#navbar .navbar-nav {
+		background-color: #333333 !important;
+		padding: 20px;
+	}
+
+	#navbar .navbar-nav .dropdown-menu {
+		opacity: 1;
+		visibility: visible;
+		transform: translateY(0);
+		box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
+		border-top: 3px solid rgb(88, 88, 88);
+	}
+
+
+	#navbar .container {
+		transform: translateY(-10px);
+	}
+
+	#navbar .navbar-collapse{
+		transform: translateY(calc(var(--navbar-collapse) - var(--navbar-expand)));
+	}
+}
+
+
+#navbar.navbar-scrolled {
+	background-color: #333333 !important;
+	height: var(--navbar-collapse);
+}
+
+#navbar.navbar-scrolled img {
+	max-height: calc(var(--navbar-collapse) - 10px);
+}
+
+
+
 
 
 
@@ -143,8 +179,8 @@ body {}
 	border-bottom: 2px solid white !important;
 }
 
-
 /* Dropdown menu */
+
 #navbar .dropdown-menu {
 	display: flex;
 	transform: translateY(10px);
@@ -160,10 +196,11 @@ body {}
 #navbar .nav-item:hover .dropdown-menu {
 	opacity: 1;
 	visibility: visible;
-	transform: translateY(-5px);
+	transform: translateY(0);
 	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
 	border-top: 3px solid rgb(88, 88, 88);
 }
+
 
 #navbar .dropdown-menu .dropdown-item {
 	border-right: 2px solid rgb(220, 220, 220);
@@ -235,6 +272,11 @@ body {}
 .carousel-caption {
 	text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.5);
 }
+
+/* .carousel-item {
+	background-color: black;
+    transition: transform 2s ease, opacity 0.5s ease-in;
+} */
 
 
 /************************* 
